# RefactoringToTheStrategyPattern

./: Licence.md  Readme.md
CSharp/StrategyCSharp/: ICanvas.cs  Point.cs  Shape.cs  ShapeTest.cs  StrategyCSharp.csproj  Type.cs  Widget.cs  WidgetTest.cs
Java/StrategyPattern/: build.gradle.kts  settings.gradle.kts
Java/StrategyPattern/gradle/wrapper/: gradle-wrapper.properties
Java/StrategyPattern/src/main/java/org/example/: ICanvas.java  Mouse.java  Point.java  Type.java  Widget.java
Java/StrategyPattern/src/test/java/org/example/: WidgetTest.java
cppCmake/: CMakeLists.txt  Point.cpp  Point.h  Shape.cpp  ShapeTest.cpp  Type.h  Widget.cpp  Widget.h  WidgetTest.cpp
cppCmake/dependencies/catch2/: catch.hpp
cppCmake/dependencies/trompeloeil-main/include/: trompeloeil.hpp
cppVS/: Strategy.sln
cppVS/Strategy/: ICanvas.h  MockCanvas.h  Point.cpp  Shape.cpp  Shape.h  ShapeTest.cpp  Strategy.vcxproj  Strategy.vcxproj.filters  Widget.cpp  WidgetTest.cpp  pch.h
